# mobile-apis

./: README.md  pyproject.toml
mobile_apis/: hooks.py  modules.txt
mobile_apis/v1/: attendance.py  auth.py  masters.py  reports.py  sales.py
